--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -25295,7 +25295,7 @@
           </td>
           <td>Spark</td>
           <td>Core</td>
-          <td>The current Dai risk parameters are:• LTV: 0%• Liquidation Threshold: 0.01%• E-mode Category: N/A• Liquidation Bonus: 4.5%• Reserve Factor: 0%• Supply Cap: N/A• Borrow Cap: N/A• Optimal Utilization: N/A• Isolated Debt Ceiling: N/A• Base Rate: N/A• Slope 1: N/A• Slope 2: N/A• Reserve State: Active• Collateral: Yes• Borrowing: Yes• Isolated Collateral: No• Isolated Borrowing: Yes• Siloed Borrowing: No• Flash Loan Enabled: Yes.<br>The Dai Borrow Rate is set through the Interest Rate Model as a spread over the Sky Savings Rate. The spread is set directly by the Stability Facilitators in consultation with the Stability Scope Advisors.</td>
+          <td>The current Dai risk parameters are:• LTV: 0%• Liquidation Threshold: 0.01%• E-mode Category: N/A• Liquidation Bonus: 4.5%• Reserve Factor: 0%• Supply Cap: N/A• Borrow Cap: N/A• Optimal Utilization: 80%• Isolated Debt Ceiling: N/A• Base Rate: SSR value• Slope 1: 0.75%• Slope 2: 15%• Reserve State: Active• Collateral: Yes• Borrowing: Yes• Isolated Collateral: No• Isolated Borrowing: Yes• Siloed Borrowing: No• Flash Loan Enabled: Yes.<br>The Dai Borrow Rate is set through the Interest Rate Model as a spread over the Sky Savings Rate. The spread is set directly by the Stability Facilitators in consultation with the Stability Scope Advisors.</td>
         </tr>
         <tr>
           <td>
@@ -25303,7 +25303,7 @@
           </td>
           <td>Spark</td>
           <td>Core</td>
-          <td>The current USDS risk parameters are:• LTV: 0%• Liquidation Threshold: 0%• E-mode Category: N/A• Liquidation Bonus: 10%• Reserve Factor: 0%• Supply Cap: Unlimited• Borrow Cap: Unlimited• Optimal Utilization: 95%• Isolated Debt Ceiling: N/A• Base Rate: N/A• Slope 1: 0%• Slope 2: 20%• Reserve State: Active• Collateral: Yes• Borrowing: Yes• Isolated Collateral: No• Isolated Borrowing: Yes• Siloed Borrowing: No• Flash Loan Enabled: No.<br>The USDS Borrow Rate is set through the Interest Rate Model as a spread over the Sky Savings Rate. The spread is set directly by the Stability Facilitators in consultation with the Stability Scope Advisors.</td>
+          <td>The current USDS risk parameters are:• LTV: 0%• Liquidation Threshold: 0%• E-mode Category: N/A• Liquidation Bonus: 10%• Reserve Factor: 0%• Supply Cap: Unlimited• Borrow Cap: Unlimited• Optimal Utilization: 80%• Isolated Debt Ceiling: N/A• Base Rate: SSR value• Slope 1: 0.75%• Slope 2: 15%• Reserve State: Active• Collateral: Yes• Borrowing: Yes• Isolated Collateral: No• Isolated Borrowing: Yes• Siloed Borrowing: No• Flash Loan Enabled: No.<br>The USDS Borrow Rate is set through the Interest Rate Model as a spread over the Sky Savings Rate. The spread is set directly by the Stability Facilitators in consultation with the Stability Scope Advisors.</td>
         </tr>
         <tr>
           <td>
@@ -25319,7 +25319,7 @@
           </td>
           <td>Spark</td>
           <td>Core</td>
-          <td>The current USDT risk parameters are:• LTV: 0%• Liquidation Threshold: 0%• E-mode Category: USD• Liquidation Bonus: 0%• Reserve Factor: 5%• Supply Cap: 30,000,000 USDT• Borrow Cap: Set by cap automator• Optimal Utilization: 95%• Isolated Debt Ceiling: N/A• Base Rate: 0%• Slope 1: 6.83%• Slope 2: 15%• Reserve State: Active• Collateral: No• Borrowing: Yes• Isolated Collateral: No• Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: Yes</td>
+          <td>The current USDT risk parameters are:• LTV: 0%• Liquidation Threshold: 0%• E-mode Category: USD• Liquidation Bonus: 0%• Reserve Factor: 5%• Supply Cap: 30,000,000 USDT• Borrow Cap: Set by cap automator• Optimal Utilization: 95%• Isolated Debt Ceiling: N/A• Base Rate: 0%• Slope 1: SSR value plus 1%• Slope 2: 15%• Reserve State: Active• Collateral: No• Borrowing: Yes• Isolated Collateral: No• Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: Yes</td>
         </tr>
         <tr>
           <td>
@@ -25351,7 +25351,7 @@
           </td>
           <td>Spark</td>
           <td>Core</td>
-          <td>The current USDC risk parameters are:• LTV: 0%• Liquidation Threshold: 0%• E-mode Category: USD• Liquidation Bonus: 0%• Reserve Factor: 5%• Supply Cap: Set by cap automator• Borrow Cap: Set by cap automator• Optimal Utilization: 95%• Isolated Debt Ceiling: N/A• Base Rate: 0%• Slope 1: 6.83%• Slope 2: 15%• Reserve State: Active• Collateral: No• Borrowing: Yes• Isolated Collateral: No• Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: Yes</td>
+          <td>The current USDC risk parameters are:• LTV: 0%• Liquidation Threshold: 0%• E-mode Category: USD• Liquidation Bonus: 0%• Reserve Factor: 5%• Supply Cap: Set by cap automator• Borrow Cap: Set by cap automator• Optimal Utilization: 95%• Isolated Debt Ceiling: N/A• Base Rate: 0%• Slope 1: SSR value plus 1%• Slope 2: 15%• Reserve State: Active• Collateral: No• Borrowing: Yes• Isolated Collateral: No• Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: Yes</td>
         </tr>
         <tr>
           <td>
@@ -25537,7 +25537,7 @@
           </td>
           <td>Spark</td>
           <td>Core</td>
-          <td>The current USDT cap automator parameters are:• Supply cap ◦ gap: n/a ◦ ttl: n/a ◦ max: 30 million USDT• Borrow cap ◦ gap: 3 million USDT ◦ ttl: 12 hours ◦ max: 28.5 million USDT</td>
+          <td>The current USDT cap automator parameters are:• Supply cap ◦ gap: 100 million USDT◦ ttl: n/a ◦ max: 500 million USDT• Borrow cap ◦ gap: 50 million USDT ◦ ttl: 12 hours ◦ max: 450 million USDT</td>
         </tr>
         <tr>
           <td>
